--- a/RecupereJa/Views/Item/Index.cshtml
+++ b/RecupereJa/Views/Item/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<RecupereJa.ViewModel.ItemViewModel>
+﻿@using RecupereJa.Enums
+@model IEnumerable<RecupereJa.ViewModel.ItemViewModel>
 
 @{
     ViewData["Title"] = "Itens";
@@ -27,7 +28,7 @@
                 <td>@item.Titulo</td>
                 <td>@item.Descricao</td>
                 <td>@item.DataEncontrado?.ToString("dd/MM/yyyy HH:mm")</td>
-                <td>@(item.Status ? "Com dono" : "Perdido")</td>
+                <td>@(item.Status == ItemStatusEnum.Encontrado ? "Com dono" : "Perdido")</td>
                 <td>
                     <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
                     <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
