--- a/RecupereJa/Views/Shared/_Layout.cshtml
+++ b/RecupereJa/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -9,7 +8,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/RecupereJa.styles.css" asp-append-version="true" />
 </head>
-<body>
+<body class="@(ViewData["BodyClass"] ?? "")">
 
     <div class="container">
         <main role="main" class="pb-3">
@@ -19,9 +18,11 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            © 2025 Recupere Já. Todos os direitos reservados. - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            © 2025 Recupere Já. Todos os direitos reservados. -
+            <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
